--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <link rel="stylesheet" href="main.css">
     <meta charset="utf-8">
-    
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <title>SNAKE ||The game</title>
   </head>
   <body onkeydown="control(event)">
